--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     color: black;
     display: flex;
     justify-content: center;
-    margin-top: 200px;
+    margin-top: 50px;
     border-top: 4px solid white;
     border-bottom: 4px solid white;
     padding: 20px;
@@ -19,10 +19,11 @@ body{
 
 .day_contain{
     text-align: center;
-    height:700px;
-    width: 390px;
+    height:auto;
+    width: 350px;
     border: 4px solid black;
     margin: 10px;
+    padding-bottom: 40px;
     font-weight: bold;
     border-radius: 20px;
     background-color: white;
@@ -34,17 +35,13 @@ body{
 }
 
 .temperature{
-    font-size:80px;
+    font-size:50px;
     margin: 0;
 }
 
-.description{
-    margin: 0;
-    padding: 0;
-}
 
 .city_change{
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
     margin-top: 100px;
 }
